--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=stockmaster
+spring.datasource.url=jdbc:postgresql://autorack.proxy.rlwy.net:33420/railway
+spring.datasource.username=postgres
+spring.datasource.password=BTiyKHZotECALDCnkiMPKGSnVErqSULO
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.servlet.context-path=/api/v1
